SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Current_State__c.field-meta.xml
<CustomField>
    <fullName>Current_State__c</fullName>
    <label>Current State</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre CSM</fullName>
            </value>
            <value>
                <fullName>Kickoff</fullName>
            </value>
            <value>
                <fullName>On Boarding Phase</fullName>
            </value>
            <value>
                <fullName>Adoption</fullName>
            </value>
            <value>
                <fullName>Monitoring</fullName>
            </value>
            <value>
                <fullName>Nuture &amp; Run</fullName>
            </value>
            <value>
                <fullName>Expand</fullName>
            </value>
            <value>
                <fullName>Potentially at Risk</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Renewal Prep (internal)</fullName>
            </value>
            <value>
                <fullName>Renewal Quote Sent</fullName>
            </value>
            <value>
                <fullName>Renewal Won</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>