SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Custom_Terms__c.field-meta.xml
<CustomField>
    <fullName>Custom_Terms__c</fullName>
    <description>Used by Deal Desk and is read/written to by DealHub integration. See BIZ-122.</description>
    <inlineHelpText>Custom terms and conditions related to a customer&apos;s contractual agreements.</inlineHelpText>
    <label>Custom Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>