SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Customer_as_of__c.field-meta.xml
<CustomField>
    <fullName>Customer_as_of__c</fullName>
    <inlineHelpText>Date account became our customer</inlineHelpText>
    <label>Customer as of</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>New Business</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>