SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Customer_Goals__c.field-meta.xml
<CustomField>
    <fullName>Customer_Goals__c</fullName>
    <inlineHelpText>What are the customer&apos;s goals?</inlineHelpText>
    <label>Customer Goals</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>