SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Customer_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Customer_Maturity__c</fullName>
    <label>Customer Maturity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Churn Risk</fullName>
            </value>
            <value>
                <fullName>2. Adoption and Training</fullName>
            </value>
            <value>
                <fullName>3. Services &amp; Consulting</fullName>
            </value>
            <value>
                <fullName>4. Growth &amp; Expansion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>