SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Data_Export_ARR__c.field-meta.xml
<CustomField>
    <fullName>Data_Export_ARR__c</fullName>
    <label>Data Export ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>