SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Days_into_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Days_into_Deployment__c</fullName>
    <formula>today() - Historic_Renewal_Date__c + 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days into Deployment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>