SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Days_Owned_by_Previous_CSM__c.field-meta.xml
<CustomField>
    <fullName>Days_Owned_by_Previous_CSM__c</fullName>
    <formula>Previous_CSM_Removed__c - Previous_CSM_Assigned__c</formula>
    <label>Days Owned by Previous CSM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>