SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/DB_Current_CSM_Assigned_FY_End__c.field-meta.xml
<CustomField>
    <fullName>DB_Current_CSM_Assigned_FY_End__c</fullName>
    <formula>(IF(CSM_Assigned__c &lt; (DATE(2020,2,1)),(DATE(2021,2,1))-(DATE(2020,2,1)),(DATE(2021,2,1) - CSM_Assigned__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DB Current CSM Assigned &amp; FY End</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>