SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/DBA__c.field-meta.xml
<CustomField>
    <fullName>DBA__c</fullName>
    <inlineHelpText>Doing Business As</inlineHelpText>
    <label>DBA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>