SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Default_Rating__c.field-meta.xml
<CustomField>
    <fullName>Default_Rating__c</fullName>
    <description>What is the Account&apos;s ranking? (based on employee size)</description>
    <formula>IF( ISNULL(NumberOfEmployees), &quot;Unknown&quot;, 
IF( ISPICKVAL(Account_Category__c,&quot;Strategic Account&quot;),&quot;Strategic&quot;, 
IF( ISPICKVAL(Account_Category__c,&quot;Regional&quot;),&quot;Regional&quot;, 
IF(NumberOfEmployees &lt;250,&quot;SMB&quot;, 
IF(NumberOfEmployees &lt;5000,&quot;Inside&quot;, 
&quot;Field&quot;)))))</formula>
    <inlineHelpText>SMB, General, Strategic</inlineHelpText>
    <label>Default Rating</label>
    <type>Text</type>
</CustomField>