SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Email_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Domain__c</fullName>
    <formula>IF(OR(BEGINS(Website, &quot;http://www&quot;),BEGINS(Website, &quot;https://www&quot;), BEGINS(Website, &quot;www.&quot;)),
    SUBSTITUTE(Website, LEFT(Website, FIND(&quot;.&quot;, Website)), NULL),

        IF(BEGINS(Website, &quot;http://&quot;),
            MID(Website, FIND(&apos;http://&apos;, Website, 1)+7, (LEN(Website) - FIND(&apos;http://&apos;, Website, 1)+7)),

                IF(BEGINS(Website, &quot;https://&quot;),
                    MID(Website, FIND(&apos;https://&apos;, Website, 1)+8, (LEN(Website) - FIND(&apos;https://&apos;, Website, 1)+8)),

                        Website
                )
        )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Domain</label>
    <type>Text</type>
</CustomField>