SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Employee_Range__c.field-meta.xml
<CustomField>
    <fullName>Employee_Range__c</fullName>
    <label>Employee Range</label>
    <length>255</length>
    <type>Text</type>
</CustomField>