SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Engagement_link__c.field-meta.xml
<CustomField>
    <fullName>Engagement_link__c</fullName>
    <inlineHelpText>Attach confluence link for details on engagement</inlineHelpText>
    <label>Engagement link</label>
    <type>Url</type>
</CustomField>