SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Enterprise_Plan__c.field-meta.xml
<CustomField>
    <fullName>Enterprise_Plan__c</fullName>
    <description>Do they have a closed won enterprise plan?</description>
    <inlineHelpText>Do they have a closed won enterprise plan?</inlineHelpText>
    <label>Enterprise Plans</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>CW - Closed Won</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>New Business, Cross-sell, Expansion, Expansion Add-on, Expansion New Product</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Plan__c</field>
        <operation>equals</operation>
        <value>Enterprise - Starter, Enterprise</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>