SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Entitled_C_Mau__c.field-meta.xml
<CustomField>
    <fullName>Entitled_C_Mau__c</fullName>
    <label>Entitled CMau</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>