SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Entitled_Data_Export__c.field-meta.xml
<CustomField>
    <fullName>Entitled_Data_Export__c</fullName>
    <label>Entitled Data Export</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>