SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Entitled_Experimentation_Events__c.field-meta.xml
<CustomField>
    <fullName>Entitled_Experimentation_Events__c</fullName>
    <label>Entitled Experimentation Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>