SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Entitled_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Entitled_Last_Updated__c</fullName>
    <label>Entitled Last Updated</label>
    <type>Date</type>
</CustomField>