SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Entitled_Platform__c.field-meta.xml
<CustomField>
    <fullName>Entitled_Platform__c</fullName>
    <label>Entitled Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>StandardTrial</fullName>
            </value>
            <value>
                <fullName>EnterpriseTrial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>