SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Equity_Holding_VC_Firm_Investment_Fund__c.field-meta.xml
<CustomField>
    <fullName>Equity_Holding_VC_Firm_Investment_Fund__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this box is checked, do not look to Parent Company to determine ownership/territory. This company is their own separate entity.</inlineHelpText>
    <label>Detached from Parent</label>
    <type>Checkbox</type>
</CustomField>