SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Expected_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Expected_Attendees__c</fullName>
    <description>Input expected attendees from LD and client side</description>
    <inlineHelpText>Input expected attendees from LD and client side</inlineHelpText>
    <label>Number of Expected Attendees</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>