SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Experimentation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Experimentation_Amount__c</fullName>
    <inlineHelpText>Total Amount Spent on Experimentation</inlineHelpText>
    <label>Experimentation Amount</label>
    <summarizedField>Opportunity.Experimentation_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>New Business, Expansion Add-on, Expansion New Product, Contraction, Churn</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>contains</operation>
        <value>Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>