SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Funding_Rounds__c.field-meta.xml
<CustomField>
    <fullName>Funding_Rounds__c</fullName>
    <inlineHelpText>Pulled from Zoominfo</inlineHelpText>
    <label>Funding Rounds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>