SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <description>geography, uploaded field - no workflow or formula</description>
    <label>Geo</label>
    <length>225</length>
    <type>Text</type>
</CustomField>