SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Growth_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Growth_Drivers__c</fullName>
    <label>Growth Drivers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>