SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Hierarchy_Level__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Level__c</fullName>
    <formula>IF(
 ISBLANK(ParentId) , &quot;Tier 1&quot;,
IF(
  ISBLANK(Parent.ParentId) , &quot;Tier 2&quot;, 
IF(
  ISBLANK(Parent.Parent.ParentId) , &quot;Tier 3&quot;,
IF(
  ISBLANK(Parent.Parent.Parent.ParentId) , &quot;Tier 4&quot;,
IF(
  ISBLANK(Parent.Parent.Parent.Parent.ParentId) , &quot;Tier 5&quot;,
IF(
  ISBLANK(Parent.Parent.Parent.Parent.Parent.ParentId) , &quot;Tier 6&quot;,
IF(
  ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.ParentId) ,&quot;Tier 7&quot;,
IF(
  ISBLANK(Parent.Parent.Parent.Parent.Parent.Parent.Parent.ParentId) , &quot;Tier 8&quot;,
 &quot;Error&quot;
))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarchy Level</label>
    <type>Text</type>
</CustomField>