SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Historic_Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Historic_Renewal_Date__c</fullName>
    <description>Date of the earliest active Renewal</description>
    <inlineHelpText>Date of the earliest active Renewal</inlineHelpText>
    <label>Historic Renewal Date - deprecated</label>
    <summarizedField>Opportunity.Most_Recent_Product_End_Date__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>Renewal, Auto Renewal</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>