SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Holdover_Accont__c.field-meta.xml
<CustomField>
    <fullName>Holdover_Accont__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holdover Accont</label>
    <type>Checkbox</type>
</CustomField>