SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Holdover_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Holdover_End_Date__c</fullName>
    <label>Holdover End Date</label>
    <type>Date</type>
</CustomField>