SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Is_Stripe_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_Stripe_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stripe Customer</label>
    <type>Checkbox</type>
</CustomField>