SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/IT_Department_Budget__c.field-meta.xml
<CustomField>
    <fullName>IT_Department_Budget__c</fullName>
    <description>Pulled from ZI</description>
    <label>IT Department Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>