SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Joes_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Joes_Accounts__c</fullName>
    <description>Keep or let go</description>
    <label>Joes Accounts</label>
    <length>10</length>
    <type>Text</type>
</CustomField>