SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Last_Activity_Date_on_Acct__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date_on_Acct__c</fullName>
    <formula>today() - LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since last activity on acct</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>