SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Last_AE_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_AE_Activity__c</fullName>
    <label>Last AE Activity</label>
    <type>Date</type>
</CustomField>