SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Last_CSM_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_CSM_Activity__c</fullName>
    <label>Last CSM Activity</label>
    <type>Date</type>
</CustomField>