SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Last_Reference_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Reference_Activity__c</fullName>
    <label>Last Reference Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Published Quote</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Event/Webinar Speaker</fullName>
            </value>
            <value>
                <fullName>Sales Reference Call</fullName>
            </value>
            <value>
                <fullName>Analyst Reference</fullName>
            </value>
            <value>
                <fullName>PR Reference</fullName>
            </value>
            <value>
                <fullName>Testimonial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>