SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Last_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reference_Date__c</fullName>
    <description>When the customer was last outreached for a reference activity.</description>
    <label>Last Reference Date</label>
    <type>Date</type>
</CustomField>