SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Latest_Closed_Won_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Latest_Closed_Won_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Populated via the &apos;Opportunity - Edit&apos; process in process builder.</description>
    <inlineHelpText>The Closed Won Opportunity related to this Account with the latest/most recent Close Date. Will be blank if there are no Closed Won Opportunities related to this Account.</inlineHelpText>
    <label>Latest Closed Won Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Opportunity.Account.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>