SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/LD_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>LD_Account_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The LaunchDarkly Account ID (associated with the Lead that was converted into this Account)</description>
    <externalId>true</externalId>
    <inlineHelpText>The LaunchDarkly Account ID (associated with the Lead that was converted into this Account)</inlineHelpText>
    <label>LD Account ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>