SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/LD_Version__c.field-meta.xml
<CustomField>
    <fullName>LD_Version__c</fullName>
    <description>Which version of LaunchDarkly is the Account on?</description>
    <inlineHelpText>Which version of LaunchDarkly is the Account on?</inlineHelpText>
    <label>LD Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>V1</fullName>
            </value>
            <value>
                <fullName>V2</fullName>
                <default>true</default>
                <label>V2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>