SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Lean_Data_Active_Opps__c.field-meta.xml
<CustomField>
    <fullName>Lean_Data_Active_Opps__c</fullName>
    <formula>Open_Opps__c &gt; 0</formula>
    <label>Lean Data - Active Opps</label>
    <type>Checkbox</type>
</CustomField>