SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/LeanData_Target_Account_Router__c.field-meta.xml
<CustomField>
    <fullName>LeanData_Target_Account_Router__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is to route target accounts in LeadData</description>
    <label>LeanData Target Account Router</label>
    <type>Checkbox</type>
</CustomField>