SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Licensed_MAU_s__c.field-meta.xml
<CustomField>
    <fullName>Licensed_MAU_s__c</fullName>
    <label>Licensed MAU&apos;s</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>