SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Link_to_Growth_Plan__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Growth_Plan__c</fullName>
    <description>Confluence Link to Growth Plan</description>
    <inlineHelpText>Confluence Link to Growth Plan</inlineHelpText>
    <label>Link to Growth Plan</label>
    <type>Url</type>
</CustomField>