SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To keep track of logo approvals</description>
    <inlineHelpText>Check if this account has been approved for logos</inlineHelpText>
    <label>Logo</label>
    <type>Checkbox</type>
</CustomField>