SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Logo_Description__c.field-meta.xml
<CustomField>
    <fullName>Logo_Description__c</fullName>
    <label>Logo Description</label>
    <type>TextArea</type>
</CustomField>