SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Logo_opt_out__c.field-meta.xml
<CustomField>
    <fullName>Logo_opt_out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if this account wants to opt out on our logo online terms. This is for Self Serve accounts.</inlineHelpText>
    <label>Logo opt out</label>
    <type>Checkbox</type>
</CustomField>