SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Lost_Opps__c.field-meta.xml
<CustomField>
    <fullName>Lost_Opps__c</fullName>
    <description>Count of lost Opportunities at an Account</description>
    <inlineHelpText>Count of lost Opportunities at an Account</inlineHelpText>
    <label>Lost Opps</label>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>CL - Closed Lost</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>New Business, Expansion, Expansion Add-on, Expansion New Product</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>