SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Maturity_Index__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Index__c</fullName>
    <inlineHelpText>The overall maturity score based on the four focus areas: People, Processes, Technology and Charter
1=low, 5=high</inlineHelpText>
    <label>Maturity Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>X1_5</valueSetName>
    </valueSet>
</CustomField>