SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Most_Recent_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Closed_Date__c</fullName>
    <inlineHelpText>The most recent Closed Won NB/Expansion Opportunity</inlineHelpText>
    <label>Most Recent Closed Date</label>
    <summarizedField>Opportunity.CloseDate</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsWon</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Opportunity.Type</field>
        <operation>equals</operation>
        <value>New Business, Expansion Add-on, Expansion New Product, Renewal, Auto Renewal</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>