SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Most_Recent_Opportunity_Status__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Opportunity_Status__c</fullName>
    <label>Most Recent Opportunity Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>