SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Named_Account__c.field-meta.xml
<CustomField>
    <fullName>Named_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the Account selected for outbounding?</description>
    <inlineHelpText>Is the Account selected for outbounding?</inlineHelpText>
    <label>Named Account</label>
    <type>Checkbox</type>
</CustomField>