SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/No_CSM_Assigned__c.field-meta.xml
<CustomField>
    <fullName>No_CSM_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No CSM Assigned</label>
    <type>Checkbox</type>
</CustomField>