SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/Number_of_Licensed_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Licensed_Users__c</fullName>
    <label>Licensed Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>