SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/of_Year_Owned_by_CSM__c.field-meta.xml
<CustomField>
    <fullName>of_Year_Owned_by_CSM__c</fullName>
    <formula>DB_Current_CSM_Assigned_FY_End__c/366</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Year Owned by CSM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>