SFDC_LD_Packages/objects-layouts/main/default/objects/Account/fields/On_site_Policies__c.field-meta.xml
<CustomField>
    <fullName>On_site_Policies__c</fullName>
    <inlineHelpText>HR policies for any onsite visits</inlineHelpText>
    <label>On-site Policies</label>
    <type>TextArea</type>
</CustomField>